--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,10 @@ dependencies {
 	implementation group: 'javax.xml.bind', name: 'jaxb-api', version: jaxbApiVersion
 	implementation group: 'org.postgresql', name: 'postgresql', version: postgresqlDriverVersion
 	implementation group: 'org.springframework', name: 'spring-orm', version: springOrmVersion
+    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+    implementation("org.flywaydb:flyway-core:9.22.3")
 
 
 
